<resources>
    <string name="app_name">ECGE Foods</string>
    <string name="btn_excluir">Excluir</string>
    <string name="btn_salvar">Salvar</string>
    <string name="categorias_vazio">Não há categorias cadastradas</string>
    <string name="cancelar_mesa">Cancelar mesa?</string>
    <string name="cancelar_produto">Deseja realmente cancelar este produto?</string>
    <string name="desfazer_exclusao">Desfazer a exclusão</string>
    <string name="enviar_pedido">Enviar pedido</string>
    <string name="enviar_mesa_backend">Envie os pedidos antes de fechar a conta ou cancele a mesa na tela anterior</string>
    <string name="encerramento_conta_solicitado">O encerramento já foi solicitado</string>
    <string name="exclusao_invalida">Para excluir o último item é necessário cancelar a mesa na tela anterior</string>
    <string name="falha_cancelar_mesa">Falha no cancelamento da mesa</string>
    <string name="falha_envio_pedido">Falha no envio do pedido</string>
    <string name="falha_conexao_servidor">Falha na conexão com o servidor</string>
    <string name="falha_exclusao_produto">Falha na exclusão do produto</string>
    <string name="falha_fecha_conta">Falha no encerramento da conta</string>
    <string name="falha_diminuir">Não é possível diminuir produtos já enviados</string>
    <string name="fechar_conta">Fechar conta</string>
    <string name="hint_numero_nova_mesa">Informe o número</string>
    <string name="hint_quantidade">Quantidade</string>
    <string name="hint_observacoes">Informe nova observação</string>
    <string name="impressoras_nao_cadastradas">Não há impressoras cadastradas</string>
    <string name="valor_maior_um">Informe um valor maior ou igual a 1</string>
    <string name="label_cancelar_qtd">Quantidade para cancelar de</string>
    <string name="label_categorias">CATEGORIAS</string>
    <string name="label_desconto">Desconto:</string>
    <string name="label_garcom">GARÇOM:</string>
    <string name="label_lancamento">Lançamento</string>
    <string name="label_mesa">Mesa</string>
    <string name="label_mesas">Mesas</string>
    <string name="label_nova_mesa">NOVA MESA</string>
    <string name="label_observacoes">OBSERVAÇÕES</string>
    <string name="label_pedido">Pedido</string>
    <string name="label_preco">Preço:</string>
    <string name="label_produto">Produto</string>
    <string name="label_produtos">Produtos</string>
    <string name="label_qtd">Quantidade:</string>
    <string name="label_servico">SERVIÇO:</string>
    <string name="label_subtotal">SUBTOTAL:</string>
    <string name="label_total">TOTAL:</string>
    <string name="label_unidade">Unidade:</string>
    <string name="lista_mesas_vazia">Não existe caixa aberto. Abra o caixa e acesse novamente.</string>
    <string name="menu_sair">Sair</string>
    <string name="mesa_cancelada">Mesa cancelada</string>
    <string name="mesa_existente">Mesa mesa já existente</string>
    <string name="mesa_sem_pedido">Mesa sem pedido!</string>
    <string name="mesas_sem_lancamento">Não existe mesa com pedido lançado</string>
    <string name="mesas_vazias">Não há mesas abertas, crie uma nova mesa no botão abaixo.</string>
    <string name="mesa_fecha_conta_enviado">Fechamento concluído</string>
    <string name="numero_nova_mesa_obrigatorio">Informe um número para nova mesa</string>
    <string name="pedido_marcado_exclusao">O produto será excluído</string>
    <string name="pedido_enviado">O pedido foi enviado com sucesso</string>
    <string name="pedido_pendente">Não é possível voltar sem enviar ou excluir os pedidos pendentes</string>
    <string name="produto_sem_observacoes">Não existe observações para o produto selecionado</string>
    <string name="quantidade_extrapolada">Quantidade para o cancelamento não pode ser maior que a quantidade total do item</string>
    <string name="adicionar">Adicionar</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="info_backend">Para o correto funcionamento do App é necessário informar um endereço de url no formato "http://nome_maquina_ou_ip:porta" que realizará o processamento dos pedidos.</string>
    <string name="selecione_categoria">Selecione a categoria dos produtos</string>
    <string name="selecione_impressora">Selecione a impressora</string>
    <string name="selecione_mesa">Selecione uma mesa</string>
    <string name="selecione_mesa_nova">Nova mesa</string>
    <string name="selecione_produto">Selecione o produto</string>
    <string name="title_activity_login">ECGEFoods</string>
    <string name="todos_pedidos_enviados">Todos pedidos já foram enviados</string>
    <string name="url_invalida">URL no formato inválido</string>
    <string name="wifi_desabilitada">Equipamento com Wi-Fi desabilitada</string>

    <!-- Strings related to login -->
    <string name="prompt_usuario">Usuário</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_url">URL</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_usuario">Usuário inválido</string>
    <string name="falha_login">Usuário ou senha inválidos</string>
    <string name="error_invalid_password">A senha é muito curta</string>
    <string name="error_incorrect_password">A senha está incorreta</string>
    <string name="error_field_required">Campo de preenchimento obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
