<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/btn_enviar_pedido"
        android:enabled="true"
        android:icon="@drawable/baseline_assignment_turned_in_white_48"
        android:title="@string/enviar_pedido"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/btn_fechar_conta"
        android:enabled="true"
        android:icon="@drawable/baseline_receipt_white_48"
        android:title="@string/fechar_conta"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/btn_produtos"
        android:enabled="true"
        android:icon="@drawable/baseline_restaurant_menu_white_48"
        android:title="@string/label_produtos"
        app:showAsAction="ifRoom" />
</menu>