<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/edtNumeroMesa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_numero_nova_mesa"
        style="@style/Base.Widget.AppCompat.EditText"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="number"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/primary_text" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp">

        <Button
            android:id="@+id/btnSalvarNrMesa"
            style="?android:textAppearanceSmall"
            android:layout_alignParentLeft="true"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@drawable/btn_entrar_gradient"
            android:text="@string/salvar"
            android:textColor="@color/mint_cream"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCancelarNrMesa"
            style="?android:textAppearanceSmall"
            android:layout_alignParentRight="true"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@drawable/btn_entrar_gradient"
            android:text="@string/cancelar"
            android:textColor="@color/mint_cream"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>