<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".fragment.ObservacaoDialogFragment">

    <FrameLayout
        android:id="@+id/flObservacao"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginBottom="16dp"
        android:layout_alignParentTop="true">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipeToRefreshObservacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewObservacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cacheColorHint="@android:color/transparent"
                android:clipToPadding="false"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:listSelector="@android:color/transparent"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbars="vertical" />

        </android.support.v4.widget.SwipeRefreshLayout>

    </FrameLayout>

    <EditText
        android:id="@+id/edtObservacoesProduto"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_below="@+id/flObservacao"
        android:padding="15dp"
        android:background="@drawable/line_border"
        android:hint="@string/hint_observacoes"
        android:inputType="textMultiLine"
        android:overScrollMode="always"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/btnAdicionarObservacoes"
        style="?android:textAppearanceSmall"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edtObservacoesProduto"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_entrar_gradient"
        android:minHeight="48dp"
        android:text="@string/adicionar"
        android:textColor="@color/mint_cream"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnCancelarObservacao"
        style="?android:textAppearanceSmall"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edtObservacoesProduto"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_entrar_gradient"
        android:minHeight="48dp"
        android:text="@string/cancelar"
        android:textColor="@color/mint_cream"
        android:textStyle="bold" />

</RelativeLayout>