<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/foreground"
        android:layout_alignTop="@+id/foreground">
        <include layout="@layout/delete_background" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/foreground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_ice"
        android:foreground="?android:selectableItemBackground"
        android:padding="5dp">

        <ImageView
            android:id="@+id/check"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_above="@+id/txtUnidade"
            android:layout_alignBottom="@+id/txtProduto"
            android:layout_marginBottom="4dp"
            android:paddingRight="4dp"
            android:src="@drawable/baseline_check_circle_black_18dp" />

        <TextView
            android:id="@+id/txtProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/check"
            android:text="Produto"
            android:textSize="24sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/primary_text"/>

        <TextView
            android:id="@+id/labelUnidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/check"
            android:textSize="16sp"
            android:text="@string/label_unidade" />

        <TextView
            android:id="@+id/txtUnidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtProduto"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/labelUnidade"
            android:textSize="18sp"
            android:text="0"
            android:textColor="@color/primary_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/labelQuantidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtProduto"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/txtUnidade"
            android:textSize="16sp"
            android:text="@string/label_qtd" />

        <TextView
            android:id="@+id/txtQuantidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtProduto"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/labelQuantidade"
            android:text="2"
            android:textSize="16sp"
            android:textColor="@color/primary_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/labelPreco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/txtUnidade"
            android:textSize="16sp"
            android:text="@string/label_preco" />

        <TextView
            android:id="@+id/txtPreco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtUnidade"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/labelPreco"
            android:text="R$ 2,00"
            android:textSize="16sp"
            android:textColor="@color/primary_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/labelTotalProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtUnidade"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/txtPreco"
            android:textSize="16sp"
            android:text="@string/label_total" />

        <TextView
            android:id="@+id/txtTotalProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtUnidade"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/labelTotalProduto"
            android:text="R$ 4,00"
            android:textSize="16sp"
            android:textColor="@color/primary_text"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtProduto"
            android:layout_alignParentRight="true">

            <!--<ImageButton-->
                <!--android:id="@+id/btn_observacoes"-->
                <!--android:paddingRight="50dp"-->
                <!--android:layout_gravity="center_vertical|right"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:background="@color/transparent"-->
                <!--android:src="@drawable/baseline_error_outline_24"/>-->

            <ImageButton
                android:id="@+id/btn_adiciona"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/btn_diminui"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:background="@color/transparent"
                android:src="@drawable/baseline_add_circle_outline_black_36"/>

            <ImageButton
                android:id="@+id/btn_diminui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:background="@color/transparent"
                android:src="@drawable/baseline_remove_circle_outline_black_36"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>