<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/divider"
                app:cardCornerRadius="10dp"
                app:cardElevation="15dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                card_view:backgroundTint="@color/divider"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="15dp">

                <LinearLayout
                    android:id="@+id/ll_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:alpha="1"
                        android:background="@color/mint_cream"
                        android:paddingBottom="6dp"
                        android:paddingTop="@dimen/keyline_1_minus_8dp"
                        app:srcCompat="@drawable/logo" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="6dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="gravity"
                            android:layout_marginLeft="@dimen/keyline_1_minus_8dp"
                            android:layout_marginRight="@dimen/keyline_1_minus_8dp"
                            android:textSize="16dp"
                            android:text="@string/info_backend"/>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/keyline_1_minus_8dp"
                            android:layout_marginRight="@dimen/keyline_1_minus_8dp"
                            android:textColorHint="@color/primary_text">

                            <EditText
                                android:id="@+id/backend"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_url"
                                android:inputType="text" />

                        </android.support.design.widget.TextInputLayout>

                        <Button
                            android:id="@+id/btn_salvar"
                            style="?android:textAppearanceSmall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/keyline_1_minus_8dp"
                            android:layout_marginLeft="@dimen/keyline_1_minus_8dp"
                            android:layout_marginRight="@dimen/keyline_1_minus_8dp"
                            android:layout_marginTop="16dp"
                            android:background="@drawable/btn_entrar_gradient"
                            android:text="@string/btn_salvar"
                            android:textColor="@color/mint_cream"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>
        </ScrollView>

    </FrameLayout>
</LinearLayout>