<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card_pedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="65dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="70dp"
        app:cardBackgroundColor="@color/white_ice"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        card_view:backgroundTint="@color/white_ice"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="6dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                android:paddingLeft="6dp"
                android:paddingRight="6dp">

                <TextView
                    android:id="@+id/txtMesa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/btn_entrar"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/labelGarcom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/txtMesa"
                    android:text="@string/label_garcom"
                    android:textSize="20sp"
                    android:textColor="@color/btn_entrar"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtGarcom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/labelGarcom"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/labelGarcom"
                    android:textColor="@color/btn_entrar"
                    android:textSize="20sp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#a8a8a8" />

            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/swipeToRefresh"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".1">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rvPedidos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white_ice"
                        android:cacheColorHint="@android:color/transparent"
                        android:clipToPadding="false"
                        android:divider="@null"
                        android:dividerHeight="0dp"
                        android:listSelector="@android:color/transparent"
                        android:scrollbarStyle="outsideOverlay"
                        android:scrollbars="vertical" />

                </RelativeLayout>

            </android.support.v4.widget.SwipeRefreshLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/primary" />

            <RelativeLayout
                android:id="@+id/rlTotais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                android:paddingLeft="6dp"
                android:paddingRight="6dp">

                <TextView
                    android:id="@+id/labelSubtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/btn_entrar"
                    android:text="@string/label_subtotal"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtSubtotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/labelSubtotal"
                    android:layout_marginLeft="5dp"
                    android:gravity="right"
                    android:textColor="@color/btn_entrar"
                    android:text="R$ 0,00"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/labelServico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/labelSubtotal"
                    android:textColor="@color/btn_entrar"
                    android:text="@string/label_servico"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtServico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/labelServico"
                    android:layout_marginLeft="5dp"
                    android:gravity="right"
                    android:text="R$ 0,00"
                    android:textColor="@color/btn_entrar"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/labelTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/labelServico"
                    android:textColor="@color/btn_entrar"
                    android:text="@string/label_total"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/labelTotal"
                    android:gravity="right"
                    android:textColor="@color/btn_entrar"
                    android:text="R$ 0,00"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
